# aind-workbench

./: .gitignore  LICENSE  README.md  create_unique_summary.py  extract_subject_ids.py  pyproject.toml
.github/ISSUE_TEMPLATE/: milestone-template.yml
.github/workflows/: auto-populate-dates.yml
aind_workbench/: __init__.py  iacuc.py
examples/: docdb_access_example.ipynb
notebooks/: 2025.02.19_buckets_by_project.ipynb  2025.02.21_sample_issue_for_hackathon.ipynb  2025.03.13_test_api_endpoint.ipynb  2025.04.08_retrograde_label_metadata_explore.ipynb  2025.04.09_explore_long_exposure_times.ipynb  2025.04.15_explore_power_values.ipynb  2025.12.23_investigate_patch_upgrade_failures.ipynb  2026.01.13_dataverse_exploration.ipynb  instrument_upgrade_error_df.csv  test.py  test_notebook.ipynb  vr_foraging_v1_v2_comparison.csv
projects/2025.12.23_test_upgrader/: README.md  compare_assets.py  find_missing_procedures.py  pyproject.toml  simple_upgrade_test.py  test_upgrader.py
projects/2026.01.02_fib_name_mismatch/: README.md  analyze_dates.py  fib_mismatch_search.py  fib_modality_issues.txt  fib_modality_issues_analyzed.csv  pyproject.toml
projects/2026.01.16_barseq_acquisition/: PLACEHOLDERS_TO_FILL.md  barseq_780346_acquisition.json  barseq_acquisition_builder.py
projects/2026.01.23_project_name_exploration/: all_null_project_names.csv  generate_null_project_name_list.py  get_incorrect_project_names.py  incorrect_projects.csv  incorrect_projects_10.csv  incorrect_projects_500.csv  pyproject.toml  test_10.csv  test_50.csv  test_500.csv
projects/2026.01.27_explore_upgrader/: .gitignore  ACTION_PLAN.md  FINDINGS.md  INVESTIGATION_COMPLETE.md  MAPPER_ANALYSIS.md  README.md  REPORT.md  SUMMARY.md  analyze_patterns.py  analyze_session_data.py  check_asset.py  download_mappers.py  find_affected_assets.py  inspect_7fiber_asset.py  investigate_asset.py  main.py  new_mapper.py  pyproject.toml
projects/2026.02.04_explore_ffmpeg_issue/: README.md  affected_assets.csv  create_summary_csv.py  generate_codeocean_commands.py  identify_affected_files.py  pyproject.toml
projects/2026.02.04_explore_ffmpeg_issue/ffmpeg_issue_exploration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/2026.03.25_github_pr_creation/: add_milestone_linking_workflow.py  backfill_subissue_links.py  build_roadmap_matrix.py  check_repo_permissions.py  check_token.py  create_issue_linking_prs.py  explore_project_board.py  issue_board_linking_testing.md  pr_links.txt  pyproject.toml  repo_matrix.csv  repos_list.txt
projects/2026.04.10_attach_co_assets/: attach_assets.py  (+1 more)
projects/fiber-schematic-viewer/: ARCHITECTURE.md  CACHING.md  METADATA_SERVICE_MIGRATION.md  MIGRATION_SUMMARY.txt  README.md  app.py  config.py  populate_cache.py  pyproject.toml
projects/fiber-schematic-viewer/fiber_schematic_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/fiber-schematic-viewer/params/static/: style.css
projects/fiber-schematic-viewer/params/templates/: index.html
projects/mapseq_blackbox_acquisition/: _procedures_helpers.py  implementation_summary.md  mapseq_780345_acquisition.json  mapseq_780346_acquisition.json  mapseq_acquisition.py  procedures_780345.json  procedures_780345.py  procedures_780346.json  procedures_780346.py  pyproject.toml  section_representation_in_acq.md
projects/query_tool/: README.md  pyproject.toml  query_tool.py  template.html
projects/query_tool/query_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/tool-launcher/: README.md  launcher.py  pyproject.toml
projects/tool-launcher/tool_launcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/upgrader-tool/: README.md  pyproject.toml  test_upgrade.py  upgrade.py  upgrader_app.py
scripts/: test_query.py
(+1307 files in other folders)
