[project]
name = "fiber-schematic-viewer"
version = "0.1.0"
description = "Automated fiber implant schematic generator from AIND metadata"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "aind-metadata-service-client",
    "aind-data-access-api",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"