[project]
name = "query_tool"
version = "0.1.0"
description = "Web UI for running MongoDB aggregation queries against the AIND metadata database."
requires-python = ">=3.9"
dependencies = [
    "flask",
    "aind-data-access-api",
    "pandas",
    "tabulate",
    "json5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

